resources/registry/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    cert-manager.io/cluster-issuer: "buypass-prod"
  name: registry
spec:
  tls:
    - hosts:
        - registry.vvv.run
      secretName: registry-tls
  rules:
    - host: registry.vvv.run
      http:
        paths:
          - path: /
            backend:
              serviceName: registry
              servicePort: 5000
